Adjust content padding to 120px to prevent header overlap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -36,8 +36,8 @@ body {
 
 // Site Content - Account for fixed header
 .site-content {
-  padding-top: 75px;
-  min-height: calc(100vh - 75px);
+  padding-top: 120px;
+  min-height: calc(100vh - 120px);
 }
 
 // Links
